リンクを直した

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
             
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-sm">
                 <a href="https://104104104.github.io" class="navbar-brand">吉田</a>
-                <a href="#" class="navbar-brand">つなぐのサイト(仮)たち</a>
-                <a href="#" class="navbar-brand">ポートフォリオ</a>
                 <a href="https://github.com/104104104" class="navbar-brand">GitHub</a>
 
 
@@ -36,7 +34,7 @@
             </nav>
 
         </header>
-        <main style="padding-top:60px;">
+        <main style="padding-top:100px;">
 
 
         <div class="container">
@@ -51,16 +49,16 @@
 <ul>
     <li><a href="/myportfolio/">Myportfolios</a>
         <ul>
-            <li><a href="/myportfolio/flier/">Flier</a>
-            <li><a href="/myportfolio/slides/">Slides</a>
+            <li><a href="https://104104104.github.io/myportfolio/flier/">Flier</a>
+            <li><a href="https://104104104.github.io/myportfolio/slides/">Slides</a>
         </ul>
             </li>
 </ul>
 <ul>
     <li><a href="/tsunagusite/">Tsunagusites</a>
         <ul>
-            <li><a href="/tsunagusite/hugo/">Hugo</a>
-            <li><a href="/tsunagusite/fullscratch/">Fullscratch</a>
+            <li><a href="https://104104104.github.io/tsunagusite/hugo/">Hugo</a>
+            <li><a href="https://104104104.github.io/tsunagusite/fullscratch/">Fullscratch</a>
         </ul>
             </li>
 </ul>
