--- a/tsunagu_hugo/test19/pages/index.html
+++ b/tsunagu_hugo/test19/pages/index.html
@@ -1,3 +1,3 @@
-<li><a href="https://104104104.github.io/test19/pages/">
-  <span>May 27, 2019</span>  Pages
+<li><a href="https://104104104.github.io/tsunagu_hugo/test19/pages/">
+  <span>May 31, 2019</span>  Pages
 </a></li>
