--- a/tsunagusite/hugo/index.html
+++ b/tsunagusite/hugo/index.html
@@ -50,9 +50,13 @@
 <h2 id="hugoで作り始めたサイト">Hugoで作り始めたサイト</h2>
 
 <ul>
-<li><a href="https://104104104.github.io/tsunagu_hugo/test19/index.html">
+<li><p><a href="https://104104104.github.io/tsunagu_hugo/test19/index.html">
  19回目
-</a></li>
+</a></p></li>
+
+<li><p><a href="https://104104104.github.io/tsunagu_hugo/test20/index.html">
+ 20回目
+</a></p></li>
 </ul>
 </p>
             </div>
