--- a/tsunagusite/hugo/index.html
+++ b/tsunagusite/hugo/index.html
@@ -57,6 +57,10 @@
 <li><p><a href="https://104104104.github.io/tsunagu_hugo/test20/index.html">
  20回目
 </a></p></li>
+
+<li><p><a href="https://104104104.github.io/tsunagu_hugo/test21/index.html">
+ 21回目
+</a></p></li>
 </ul>
 </p>
             </div>
