--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </li>
 </ul>
         <ul>
+            <li><a href="https://104104104.github.io/pyxel/">Pyxel</a>
         </ul>
             </li>
 </ul>
