つなぐのサイト22回目を追加

--- a/tsunagusite/hugo/index.html
+++ b/tsunagusite/hugo/index.html
@@ -61,6 +61,10 @@
 <li><p><a href="https://104104104.github.io/tsunagu_hugo/test21/index.html">
  21回目
 </a></p></li>
+
+<li><p><a href="https://104104104.github.io/tsunagu_hugo/test22/index.html">
+ 22回目
+</a></p></li>
 </ul>
 </p>
             </div>
