--- a/tsunagu_hugo/test22/index.html
+++ b/tsunagu_hugo/test22/index.html
@@ -30,7 +30,7 @@
                 <a href="https://104104104.github.io/tsunagu_hugo/test22/pages/ourmission" class="navbar-brand">Our Mission </a>
                 <a href="https://104104104.github.io/tsunagu_hugo/test22/施設紹介" class="navbar-brand">施設紹介  </a>
                 <a href="https://104104104.github.io/tsunagu_hugo/test22/pages/place" class="navbar-brand">場所  </a>
-                <a href="https://104104104.github.io/tsunagu_hugo/test22/pages/rule" class="navbar-brand">利用規約</a>
+                <a href="https://104104104.github.io/tsunagu_hugo/test22/nocatcheye/rule" class="navbar-brand">利用規約</a>
                 <a href="https://104104104.github.io/tsunagu_hugo/test22/blog" class="navbar-brand">スタッフブログ</a>
 
 
@@ -127,16 +127,25 @@
                             </li>
                 </ul>
                 <ul>
-                    <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/">施設紹介s</a>
+                    <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/">施設紹介</a>
                         <ul>
+                            <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/magatama/">勾玉型テーブル</a>
                             <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/3dprinter/">3Dプリンター</a>
+                            <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/macbookpro/">貸出用MacBookPro</a>
                             <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/syutyu/">集中ブース</a>
                             <li><a href="/tsunagu_hugo/test22/%E6%96%BD%E8%A8%AD%E7%B4%B9%E4%BB%8B/ipad/">貸出用iPad</a>
                         </ul>
                             </li>
                 </ul>
                 <ul>
-                    <li><a href="/tsunagu_hugo/test22/blog/">Blogs</a>
+                    <li><a href="/tsunagu_hugo/test22/nocatcheye/">NoCatchEye</a>
+                        <ul>
+                            <li><a href="/tsunagu_hugo/test22/nocatcheye/rule/">利用規約</a>
+                        </ul>
+                            </li>
+                </ul>
+                <ul>
+                    <li><a href="/tsunagu_hugo/test22/blog/">Blog</a>
                         <ul>
                             <li><a href="/tsunagu_hugo/test22/blog/test1/">Test1</a>
                         </ul>
