ポートフォリオの準備中のトップページを公開

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="https://104104104.github.io/portfolio/flier">一覧はこちら> </a>            
+                どちらもまだ準備中です
+                <a href="https://104104104.github.io/tsunagusite/fullscratch">一覧はこちら> </a>            
+                <a href="https://104104104.github.io/tsunagusite/hugo">一覧はこちら> </a>            
             </div>
         </div>
     </div>
@@ -129,7 +131,7 @@
             <div class="col-md-12">
                 <h3><strong>今(2019/6/22時点)やっていること</strong></h3>
                 <p>今、吉田が現在進行形でやっていることをここに晒します。最後まで行くか、途中で折れるかははっきりしていないです。最後までやりきる可能性が高そうな順に並べています。</p>
-                <a href="">一覧はこちら > </a>
+                <a href="">準備中です </a>
             </div>
         </div>
     </div>
