--- a/portfolio/slides/index.html
+++ b/portfolio/slides/index.html
@@ -63,6 +63,10 @@
 <li><p><a href="https://104104104.github.io/pdfnado/slide/rantyao_3.pdf">
  藍橋杯勉強会　3回目のスライド
 </a></p></li>
+
+<li><p><a href="https://104104104.github.io/pdfnado/slide/Pyxel1.pdf">
+ Pyxel勉強会のスライド
+</a></p></li>
 </ul>
 </p>
             </div>
