イベントのポートフォリオの藍橋完成

--- a/flier/flierlist/index.html
+++ b/flier/flierlist/index.html
@@ -21,6 +21,9 @@
             
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-sm">
                 <a href="https://104104104.github.io" class="navbar-brand">吉田</a>
+                <a href="https://104104104.github.io/event" class="navbar-brand">イベント</a>
+                <a href="https://104104104.github.io/flier" class="navbar-brand">フライヤー</a>
+                <a href="https://104104104.github.io" class="navbar-brand">webサイト(まだ)</a>
                 <a href="https://github.com/104104104" class="navbar-brand">吉田のGitHub</a>
 
 
@@ -57,21 +60,21 @@
 <ul>
     <li><a href="/">吉田のサイト</a>
 <ul>
-    <li><a href="/flier/">Fliers</a>
+    <li><a href="/flier/">Flier</a>
         <ul>
             <li><a href="https://104104104.github.io/flier/flierlist/">Flierlist</a>
         </ul>
             </li>
 </ul>
 <ul>
-    <li><a href="/html_experiment/">Html_experiments</a>
+    <li><a href="/html_experiment/">Html_experiment</a>
         <ul>
             <li><a href="https://104104104.github.io/html_experiment/javascript/">Javascript</a>
         </ul>
             </li>
 </ul>
 <ul>
-    <li><a href="/portfolio/">Portfolios</a>
+    <li><a href="/portfolio/">Portfolio</a>
         <ul>
             <li><a href="https://104104104.github.io/portfolio/flier/">Flier</a>
             <li><a href="https://104104104.github.io/portfolio/slides/">Slides</a>
@@ -79,7 +82,7 @@
             </li>
 </ul>
 <ul>
-    <li><a href="/tsunagusite/">Tsunagusites</a>
+    <li><a href="/tsunagusite/">Tsunagusite</a>
         <ul>
             <li><a href="https://104104104.github.io/tsunagusite/hugo/">Hugo</a>
             <li><a href="https://104104104.github.io/tsunagusite/fullscratch/">Fullscratch</a>
@@ -87,10 +90,10 @@
             </li>
 </ul>
 <ul>
-    <li><a href="/event2/">Event2s</a>
+    <li><a href="/event/">Event</a>
         <ul>
-            <li><a href="https://104104104.github.io/event2/rantyao/">藍橋杯</a>
-            <li><a href="https://104104104.github.io/event2/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
+            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯</a>
+            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
         </ul>
             </li>
 </ul>
