--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-sm">
                 <a href="https://104104104.github.io" class="navbar-brand">吉田</a>
+                <a href="https://104104104.github.io/event" class="navbar-brand">イベント</a>
+                <a href="https://104104104.github.io/flier" class="navbar-brand">フライヤー</a>
+                <a href="https://104104104.github.io" class="navbar-brand">webサイト(まだ)</a>
                 <a href="https://github.com/104104104" class="navbar-brand">吉田のGitHub</a>
 
 
@@ -57,7 +60,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <a href="https://104104104.github.io/event2">一覧はこちら> </a>            
+                <a href="https://104104104.github.io/event">一覧はこちら> </a>            
             </div>
         </div>
     </div>
@@ -79,11 +82,11 @@
             <div class="col-md-2"> <img src="/img/flier_4.jpeg" class="img-fluid"> </div>
             <div class="col-md-2"> <img src="/img/flier_5.jpeg" class="img-fluid"> </div>
         </div>
- 
+
 
         <div class="row">
             <div class="col-md-12">
-                <a href="https://104104104.github.io/portfolio/flier">一覧はこちら> </a>            
+                <a href="https://104104104.github.io/portfolio/flier">一覧はこちら> </a>
             </div>
         </div>
     </div>
@@ -102,13 +105,13 @@
             <div class="col-md-3"> <a href="http://www.tsunagucafe.com">現行版つなぐカフェサイト</a> </div>
 
         </div>
- 
+
 
         <div class="row">
             <div class="col-md-12">
                 どちらもまだ準備中です
-                <a href="https://104104104.github.io/tsunagusite/fullscratch">一覧はこちら> </a>            
-                <a href="https://104104104.github.io/tsunagusite/hugo">一覧はこちら> </a>            
+                <a href="https://104104104.github.io/tsunagusite/fullscratch">一覧はこちら> </a>
+                <a href="https://104104104.github.io/tsunagusite/hugo">一覧はこちら> </a>
             </div>
         </div>
     </div>
@@ -121,7 +124,7 @@
             <div class="col-md-12">
                 <h3><strong>作ったプログラム</strong></h3>
                 <p>吉田が趣味などで書いたプログラムを<a href="https://github.com/104104104">ここのGithub</a>に置いています。特にできがいいものについては、ここのポートフォリオに個別ページを作って記録をしておきます。</p>
-                <a href="https://github.com/104104104">吉田のGithub > </a>            
+                <a href="https://github.com/104104104">吉田のGithub > </a>
             </div>
         </div>
     </div>
@@ -152,21 +155,21 @@
 <ul>
     <li><a href="/">吉田のサイト</a>
 <ul>
-    <li><a href="/flier/">Fliers</a>
+    <li><a href="/flier/">Flier</a>
         <ul>
             <li><a href="https://104104104.github.io/flier/flierlist/">Flierlist</a>
         </ul>
             </li>
 </ul>
 <ul>
-    <li><a href="/html_experiment/">Html_experiments</a>
+    <li><a href="/html_experiment/">Html_experiment</a>
         <ul>
             <li><a href="https://104104104.github.io/html_experiment/javascript/">Javascript</a>
         </ul>
             </li>
 </ul>
 <ul>
-    <li><a href="/portfolio/">Portfolios</a>
+    <li><a href="/portfolio/">Portfolio</a>
         <ul>
             <li><a href="https://104104104.github.io/portfolio/flier/">Flier</a>
             <li><a href="https://104104104.github.io/portfolio/slides/">Slides</a>
@@ -174,7 +177,7 @@
             </li>
 </ul>
 <ul>
-    <li><a href="/tsunagusite/">Tsunagusites</a>
+    <li><a href="/tsunagusite/">Tsunagusite</a>
         <ul>
             <li><a href="https://104104104.github.io/tsunagusite/hugo/">Hugo</a>
             <li><a href="https://104104104.github.io/tsunagusite/fullscratch/">Fullscratch</a>
@@ -182,10 +185,10 @@
             </li>
 </ul>
 <ul>
-    <li><a href="/event2/">Event2s</a>
+    <li><a href="/event/">Event</a>
         <ul>
-            <li><a href="https://104104104.github.io/event2/rantyao/">藍橋杯</a>
-            <li><a href="https://104104104.github.io/event2/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
+            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯</a>
+            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
         </ul>
             </li>
 </ul>
