フライヤーのページ概ね完成

--- a/event/rantyao/index.html
+++ b/event/rantyao/index.html
@@ -195,7 +195,11 @@
 <ul>
     <li><a href="/flier/">Flier</a>
         <ul>
-            <li><a href="https://104104104.github.io/flier/flierlist/">Flierlist</a>
+            <li><a href="https://104104104.github.io/flier/retoro/">初心者のためのレトロゲームを作ってみようの会の告知</a>
+            <li><a href="https://104104104.github.io/flier/rantyao/">藍橋杯および競プロ勉強会の告知</a>
+            <li><a href="https://104104104.github.io/flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
+            <li><a href="https://104104104.github.io/flier/haruzemi/">春の輪読会の告知</a>
+            <li><a href="https://104104104.github.io/flier/tsunaguabout/">「つなぐカフェ＠飯塚」とはどういう場所か知らせる</a>
         </ul>
             </li>
 </ul>
