--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3"> <img src="/img/sinnyusei.jpeg" class="img-fluid"> </div>
-            <div class="col-md-3"> <img src="/img/sinnyusei_slide.jpeg" class="img-fluid"> </div>
-            <div class="col-md-3"> <img src="/img/rantyao_1.jpeg" class="img-fluid"> </div>
+            <div class="col-md-3"> <a href="https://104104104.github.io/event"> <img src="/img/sinnyusei.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-3"> <a href="https://104104104.github.io/event/sinnyuusei"> <img src="/img/sinnyusei_slide.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-3"> <a href="https://104104104.github.io/event/rantyao"> <img src="/img/rantyao_1.jpeg" class="img-fluid"> </a></div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <a href="https://104104104.github.io/event">一覧はこちら> </a>            
+                <a href="https://104104104.github.io/event">一覧はこちら> </a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="https://104104104.github.io/portfolio/flier">一覧はこちら> </a>
+                <a href="https://104104104.github.io/flier">一覧はこちら> </a>
             </div>
         </div>
     </div>
@@ -157,7 +157,11 @@
 <ul>
     <li><a href="/flier/">Flier</a>
         <ul>
-            <li><a href="https://104104104.github.io/flier/flierlist/">Flierlist</a>
+            <li><a href="https://104104104.github.io/flier/retoro/">初心者のためのレトロゲームを作ってみようの会の告知</a>
+            <li><a href="https://104104104.github.io/flier/rantyao/">藍橋杯および競プロ勉強会の告知</a>
+            <li><a href="https://104104104.github.io/flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
+            <li><a href="https://104104104.github.io/flier/haruzemi/">春の輪読会の告知</a>
+            <li><a href="https://104104104.github.io/flier/tsunaguabout/">「つなぐカフェ＠飯塚」とはどういう場所か知らせる</a>
         </ul>
             </li>
 </ul>
