スタッフ募集のフライヤーのページを書いた

--- a/flier/nyuumon/index.html
+++ b/flier/nyuumon/index.html
@@ -94,6 +94,7 @@
     <li><a href="/flier/">Flier</a>
         <ul>
             <li><a href="https://104104104.github.io/flier/retoro/">初心者のためのレトロゲームを作ってみようの会の告知</a>
+            <li><a href="https://104104104.github.io/flier/tsunagustaff/">つなぐカフェ＠飯塚のスタッフ募集</a>
             <li><a href="https://104104104.github.io/flier/rantyao/">藍橋杯および競プロ勉強会の告知</a>
             <li><a href="https://104104104.github.io/flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
             <li><a href="https://104104104.github.io/flier/haruzemi/">春の輪読会の告知</a>
@@ -127,8 +128,8 @@
 <ul>
     <li><a href="/event/">Event</a>
         <ul>
-            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯</a>
-            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
+            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯(国際プログラミングコンテスト)のスタッフ　および　藍橋杯に向けた勉強会主催</a>
+            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベントの主催</a>
         </ul>
             </li>
 </ul>
