--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         <div class="row">
             <div class="col-md-12">
                 <h3><strong>作ったフライヤー</strong></h3>
-                <p>バイト先でフライヤーを作ることがよくあります。割と作るのが好きなので、自分からその手の仕事を取りに行っているふしはあります。フライヤーを色々作っているうちに、　Webデザインにも興味が出てきて、今(2019/6/22時点)に至ります。</p>
+                <p>バイト先でフライヤーを作ることがよくあります。割と作るのが好きなので、自分からその手の仕事を取りに行っているところはあります。フライヤーを色々作っているうちに、　Webデザインにも興味が出てきて、今(2019/6/22時点)に至ります。</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2"> <img src="/img/flier_1.jpeg" class="img-fluid"> </div>
-            <div class="col-md-2"> <img src="/img/flier_2.jpeg" class="img-fluid"> </div>
-            <div class="col-md-2"> <img src="/img/flier_3.jpeg" class="img-fluid"> </div>
-            <div class="col-md-2"> <img src="/img/flier_4.jpeg" class="img-fluid"> </div>
-            <div class="col-md-2"> <img src="/img/flier_5.jpeg" class="img-fluid"> </div>
+            <div class="col-md-2"> <a href="https://104104104.github.io/flier/tsunagustaff"><img src="/img/flier_1.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-2"> <a href="https://104104104.github.io/flier/tsunagustaff"><img src="/img/flier_2.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-2"> <a href="https://104104104.github.io/flier/retoro"><img src="/img/flier_3.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-2"> <a href="https://104104104.github.io/flier/tsunaguabout"><img src="/img/flier_4.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-2"> <a href="https://104104104.github.io/flier/nyuumon"><img src="/img/flier_5.jpeg" class="img-fluid"></a> </div>
         </div>
 
 
@@ -123,21 +123,13 @@
         <div class="row">
             <div class="col-md-12">
                 <h3><strong>作ったプログラム</strong></h3>
-                <p>吉田が趣味などで書いたプログラムを<a href="https://github.com/104104104">ここのGithub</a>に置いています。特にできがいいものについては、ここのポートフォリオに個別ページを作って記録をしておきます。</p>
+                <p>吉田が趣味などで書いたプログラムを<a href="https://github.com/104104104">ここのGithub</a>に置いています。
+                  特にできがいいものについては、ここのポートフォリオに個別ページを作って記録をしておきます(準備中)。</p>
                 <a href="https://github.com/104104104">吉田のGithub > </a>
             </div>
         </div>
     </div>
 
-    <div class="topbox">
-        <div class="row">
-            <div class="col-md-12">
-                <h3><strong>今(2019/6/22時点)やっていること</strong></h3>
-                <p>今、吉田が現在進行形でやっていることをここに晒します。最後まで行くか、途中で折れるかははっきりしていないです。最後までやりきる可能性が高そうな順に並べています。</p>
-                <a href="">準備中です </a>
-            </div>
-        </div>
-    </div>
 
 
 </div>
@@ -158,6 +150,7 @@
     <li><a href="/flier/">Flier</a>
         <ul>
             <li><a href="https://104104104.github.io/flier/retoro/">初心者のためのレトロゲームを作ってみようの会の告知</a>
+            <li><a href="https://104104104.github.io/flier/tsunagustaff/">つなぐカフェ＠飯塚のスタッフ募集</a>
             <li><a href="https://104104104.github.io/flier/rantyao/">藍橋杯および競プロ勉強会の告知</a>
             <li><a href="https://104104104.github.io/flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
             <li><a href="https://104104104.github.io/flier/haruzemi/">春の輪読会の告知</a>
@@ -191,8 +184,8 @@
 <ul>
     <li><a href="/event/">Event</a>
         <ul>
-            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯</a>
-            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベント</a>
+            <li><a href="https://104104104.github.io/event/rantyao/">藍橋杯(国際プログラミングコンテスト)のスタッフ　および　藍橋杯に向けた勉強会主催</a>
+            <li><a href="https://104104104.github.io/event/sinnyuusei/">新入生のためのプログラミング入門イベントの主催</a>
         </ul>
             </li>
 </ul>
