topページの画像のリンクを修正した

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3"> <img src="/img/website_1.jpeg" class="img-fluid"> </div>
-            <div class="col-md-3"> <img src="/img/website_2.jpeg" class="img-fluid"> </div>
+            <div class="col-md-3"> <a href="https://104104104.github.io/website/tsunaguhugo"><img src="/img/website_1.jpeg" class="img-fluid"> </a></div>
+            <div class="col-md-3"> <a href="https://104104104.github.io/website/tsunaguold"><img src="/img/website_2.jpeg" class="img-fluid"> </a></div>
             <div class="col-md-3"> <a href="http://www.tsunagucafe.com">現行版つなぐカフェサイト</a> </div>
 
         </div>
