--- a/tsunagusite/hugo/index.html
+++ b/tsunagusite/hugo/index.html
@@ -92,6 +92,12 @@
 </a></p>
 
 <p>-レスポンシブの実験。hugoのサーバーのがバグかもしれないので、gitにあげてみる</p></li>
+
+<li><p><a href="https://104104104.github.io/tsunagu_hugo/test28/index.html">
+ 28回目
+</a></p>
+
+<p>-レスポンシブうまくいったっぽい…？</p></li>
 </ul>
 </p>
             </div>
