--- a/tsunagu_hugo/test30/facility/interactivespace/interactivespace/index.html
+++ b/tsunagu_hugo/test30/facility/interactivespace/interactivespace/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>つなぐカフェ@飯塚</title>
-  <link rel="stylesheet" href="https://104104104.github.io/tsunagu_hugo/test30/style.css">
+  <link rel="stylesheet" href="https://104104104.github.io/tsunagu_hugo/test30//style.css">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
   
-  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30/mycss/style.css">
+  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30//mycss/style.css">
   
-  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30/mycss/move.css">
+  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30//mycss/move.css">
   
 
 </head>
@@ -24,17 +24,17 @@
   <header>
     
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <a href="https://104104104.github.io/tsunagu_hugo/test30" class="navbar-brand tsunaguLogoForNavbar"><img src="https://104104104.github.io/tsunagu_hugo/test30/img/logo.png" class="tsunaguLogo"></a>
+      <a href="https://104104104.github.io/tsunagu_hugo/test30/" class="navbar-brand tsunaguLogoForNavbar"><img src="https://104104104.github.io/tsunagu_hugo/test30//img/logo.png" class="tsunaguLogo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu1" aria-controls="navmenu1" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/mission/mission" class="navbar-brand">Mission </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/facility" class="navbar-brand">施設紹介 </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/access/access" class="navbar-brand">アクセス </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/blog" class="navbar-brand">スタッフブログ</a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/rule/rule" class="navbar-brand">利用規約</a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/mission/mission" class="navbar-brand">Mission </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//facility" class="navbar-brand">施設紹介 </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/access/access" class="navbar-brand">アクセス </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//blog" class="navbar-brand">スタッフブログ</a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/rule/rule" class="navbar-brand">利用規約</a>
         </div>
       </div>
     </nav>
@@ -65,21 +65,21 @@
 <p>交流スペースで実際に行われたことを参考に、以下に例を紹介します。</p>
 
 <ul>
-<li><p>スライド発表を含むイベントを行うための、<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/65display/65display" class=>65インチ4Kディスプレイ</a>
+<li><p>スライド発表を含むイベントを行うための、<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/65display/65display" class=>65インチ4Kディスプレイ</a>
 やプロジェクター。</p></li>
 
-<li><p>ポスターやスライドの資料になる絵を書くことのできる<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/ipad/ipad" class=>貸出用iPad</a>
+<li><p>ポスターやスライドの資料になる絵を書くことのできる<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/ipad/ipad" class=>貸出用iPad</a>
 。</p></li>
 
-<li><p>手ぶらで来ても、データさえあれば会社の業務の続きができる<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/macbookpro/macbookpro" class=>貸出用MacBook Pro</a>
+<li><p>手ぶらで来ても、データさえあれば会社の業務の続きができる<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/macbookpro/macbookpro" class=>貸出用MacBook Pro</a>
 。</p></li>
 
-<li><p>大人数でも会議しやすい、<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/magatama/magatama" class=>勾玉型机</a>
-や<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/writeboard/writeboard" class=>イーゼル型ホワイトボード</a>
+<li><p>大人数でも会議しやすい、<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/magatama/magatama" class=>勾玉型机</a>
+や<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/writeboard/writeboard" class=>イーゼル型ホワイトボード</a>
 。</p></li>
 
-<li><p>ものづくりを通した交流のための<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/3dprinter/3dprinter" class=>3Dプリンター</a>
-。設計は<a href="https://104104104.github.io/tsunagu_hugo/test30/facility/ipad/ipad" class=>貸出用iPad</a>
+<li><p>ものづくりを通した交流のための<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/3dprinter/3dprinter" class=>3Dプリンター</a>
+。設計は<a href="https://104104104.github.io/tsunagu_hugo/test30//facility/ipad/ipad" class=>貸出用iPad</a>
 で行えます。</p></li>
 
 <li><p>他にも、アイデア出しに使える付箋や油性ペン、テレビ会議を行うためのカメラなど用意しています。</p></li>
@@ -145,7 +145,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
-<script src="https://104104104.github.io/tsunagu_hugo/test30/mycss/move.js"></script>
+<script src="https://104104104.github.io/tsunagu_hugo/test30//mycss/move.js"></script>
 </body>
 
 </html>
