--- a/tsunagu_hugo/test30/pages/mission/mission/index.html
+++ b/tsunagu_hugo/test30/pages/mission/mission/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>つなぐカフェ@飯塚</title>
-  <link rel="stylesheet" href="https://104104104.github.io/tsunagu_hugo/test30/style.css">
+  <link rel="stylesheet" href="https://104104104.github.io/tsunagu_hugo/test30//style.css">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
   
-  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30/mycss/style.css">
+  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30//mycss/style.css">
   
-  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30/mycss/move.css">
+  <link rel="stylesheet" type="text/css" href="https://104104104.github.io/tsunagu_hugo/test30//mycss/move.css">
   
 
 </head>
@@ -24,17 +24,17 @@
   <header>
     
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <a href="https://104104104.github.io/tsunagu_hugo/test30" class="navbar-brand tsunaguLogoForNavbar"><img src="https://104104104.github.io/tsunagu_hugo/test30/img/logo.png" class="tsunaguLogo"></a>
+      <a href="https://104104104.github.io/tsunagu_hugo/test30/" class="navbar-brand tsunaguLogoForNavbar"><img src="https://104104104.github.io/tsunagu_hugo/test30//img/logo.png" class="tsunaguLogo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu1" aria-controls="navmenu1" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/mission/mission" class="navbar-brand">Mission </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/facility" class="navbar-brand">施設紹介 </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/access/access" class="navbar-brand">アクセス </a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/blog" class="navbar-brand">スタッフブログ</a>
-          <a href="https://104104104.github.io/tsunagu_hugo/test30/pages/rule/rule" class="navbar-brand">利用規約</a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/mission/mission" class="navbar-brand">Mission </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//facility" class="navbar-brand">施設紹介 </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/access/access" class="navbar-brand">アクセス </a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//blog" class="navbar-brand">スタッフブログ</a>
+          <a href="https://104104104.github.io/tsunagu_hugo/test30//pages/rule/rule" class="navbar-brand">利用規約</a>
         </div>
       </div>
     </nav>
@@ -77,7 +77,7 @@
 
 <p>普段と違う環境で作業を行いたいとき、集中して作業を行いたいとき、ぜひつなぐカフェにお越しください。つなぐカフェはコワーキングスペースとして設計されています。 複数人で作業したい時に便利な移動可能のホワイトボードや、紙の資料をたくさん広げることのできる大型の机など、協調して作業を行いやすい環境が整備されています。 他にも4Kの大型ディスプレイ、パーティションで仕切られた１～２人向けの集中ブースなど、とことん作業したいときに最適な環境が整えられています。</p>
 
-<p><img src="https://104104104.github.io/tsunagu_hugo/test30/pages/mission/2.jpg" class="img-fluid img-fluid"></p>
+<p><img src="https://104104104.github.io/tsunagu_hugo/test30//pages/mission/2.jpg" class="img-fluid img-fluid"></p>
 
 <p><div id="mission3"></div></p>
 
@@ -85,7 +85,7 @@
 
 <p>つなぐカフェでは、学生がスタッフとして運営に携わっています。学生と企業と市民をつなぐため、また、「学び」のためのよりよい環境を整えるため、日々活動しています。学生スタッフが存在することによって、学生、企業、市民が交流するコミュニティを維持することができます。 他にも、普段の業務に使えるツールの紹介や、3Dプリンターの使い方の紹介など、学生がつなぐカフェをどのように利用しているかをお伝えします。</p>
 
-<p><img src="https://104104104.github.io/tsunagu_hugo/test30/pages/mission/3.jpg" class="img-fluid img-fluid"></p>
+<p><img src="https://104104104.github.io/tsunagu_hugo/test30//pages/mission/3.jpg" class="img-fluid img-fluid"></p>
 
         </div>
       </div>
@@ -134,7 +134,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
-<script src="https://104104104.github.io/tsunagu_hugo/test30/mycss/move.js"></script>
+<script src="https://104104104.github.io/tsunagu_hugo/test30//mycss/move.js"></script>
 </body>
 
 </html>
