交流すぺーすの画像霖雨k修正

--- a/tsunagu_hugo/test30/facility/interactivespace/interactivespace/index.html
+++ b/tsunagu_hugo/test30/facility/interactivespace/interactivespace/index.html
@@ -88,7 +88,7 @@
 <p>学生・企業・市民の方が、イベントへの参加や日々の活動の場として、つなぐカフェ＠飯塚を日常的に利用することで、顔を合わせる度に相互理解を深め信頼関係を構築できる場所を目指しています。</p>
 
 <figure>
-    <img src="../1.jpeg" width="100%"/> 
+    <img src="../1.jpg" width="100%"/> 
 </figure>
 
 
