portfoiloページがドラフトになっていたので訂正

--- a/website/index.html
+++ b/website/index.html
@@ -123,6 +123,7 @@
   </li>
 </ul>
     <ul>
+      <li><a href="../portfolio/">作ったものたち</a>
       <li><a href="../introduce/">吉田の興味・関心</a>
     </ul>
   </li>
