--- a/flier/tsunagustaff/index.html
+++ b/flier/tsunagustaff/index.html
@@ -133,6 +133,7 @@
   </li>
 </ul>
     <ul>
+      <li><a href="../../portfolio/">作ったものたち</a>
       <li><a href="../../introduce/">吉田の興味・関心</a>
     </ul>
   </li>
