--- a/program/pyxelgame/index.html
+++ b/program/pyxelgame/index.html
@@ -136,6 +136,7 @@ Pyxel勉強会
   </li>
 </ul>
     <ul>
+      <li><a href="../../portfolio/">作ったものたち</a>
       <li><a href="../../introduce/">吉田の興味・関心</a>
     </ul>
   </li>
