--- a/website/tsunaguhugo/index.html
+++ b/website/tsunaguhugo/index.html
@@ -221,6 +221,7 @@
   </li>
 </ul>
     <ul>
+      <li><a href="../../portfolio/">作ったものたち</a>
       <li><a href="../../introduce/">吉田の興味・関心</a>
     </ul>
   </li>
