アイデアを思うつくにはゼミに,idタグをつけた

--- a/event/haruzemi2019/index.html
+++ b/event/haruzemi2019/index.html
@@ -108,6 +108,8 @@
 <li>そして、この三つの壁を超えた時に、閃きが起きやすい状況にいたることができる</li>
 </ul>
 
+<p><div id="HaruzemiEpisode"></div></p>
+
 <h3 id="吉田の体験談">吉田の体験談</h3>
 
 <p>U理論について知った後で、確かにU理論は正しそうだと感じたエピソードがあったので、紹介します。</p>
