--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
-          <a href="./introduce" class="navbar-brand">興味・関心</a>
+          <a href="./introduce/manabi" class="navbar-brand">学び</a>
+          <a href="./introduce/design" class="navbar-brand">デザイン</a>
           <a href="./portfolio" class="navbar-brand">作ったものたち</a>
         </div>
         <a href="https://github.com/104104104" class="navbar-brand">GitHub</a>
@@ -61,27 +62,30 @@
       <div class="col-md-12">
         <h1>学び</h1>
         <p>人が新しいことを学び変化することの支援や、そもそも「学ぶ」とはどういうことか、といった知見に興味があります。</p>
-        <p><a href="./introduce#learning">詳しくはこちら ></a></p>
+        <p><a href="./introduce/manabi/index.html">詳しくはこちら ></a></p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <a href="./event/pyxel"><img src="./img/manabi3.jpg" class="img-fluid"></a>
-        <p>「レトロゲームを作ってみようの会」</p>
-        <p>学んでいる途中で「自分が変化する」ことを勘定に入れた方が、自分の成長につながるのではないかと伝えた勉強会です。</p>
-        <a href="./event/pyxel">詳しくはこちら ></a>
+        <div class="myDetailBox">
+          <h5>「レトロゲームを作ってみようの会」</h5>
+          <a href="./event/pyxel"><img src="./img/manabi3.jpg" class="img-fluid"></a>
+          <p>学んでいる途中で「自分が変化する」ことを勘定に入れた方が、自分の成長につながるのではないかと伝えた勉強会です。</p>
+        </div>
       </div>
       <div class="col-md-4">
-        <a href="./event/rantyao"><img src="./img/manabi2.jpg" class="img-fluid"></a>
-        <p>「競プロ勉強会」</p>
-        <p>自分でプログラミングの勉強をするときに役立つ知識や、もっと一般に、何かを学ぶときに役立つ知識を伝えるようにしました。</p>
-          <a href="./event/rantyao">詳しくはこちら ></a>
+        <div class="myDetailBox">
+          <h5>「競プロ勉強会」</h5>
+          <a href="./event/rantyao"><img src="./img/manabi2.jpg" class="img-fluid"></a>
+          <p>自分でプログラミングの勉強をするときに役立つ知識や、もっと一般に、何かを学ぶときに役立つ知識を伝えるようにしました。</p>
+        </div>
       </div>
       <div class="col-md-4">
-        <a href="./event/sinnyuusei"><img src="./img/manabi1.jpg" class="img-fluid"></a>
-        <p>「プログラミング入門イベント」</p>
-        <p>参加者のみなさんが、能動的にプログラミングの勉強をしたくなるイベントを目指しました。</p>
-        <a href="./event/sinnyuusei">詳しくはこちら ></a>
+        <div class="myDetailBox offBox-md">
+          <h5>「プログラミング入門イベント」</h5>
+          <a href="./event/sinnyuusei"><img src="./img/manabi1.jpg" class="img-fluid"></a>
+          <p>参加者のみなさんが、能動的にプログラミングの勉強をしたくなるイベントを目指しました。</p>
+        </div>
       </div>
     </div>
 
@@ -89,27 +93,29 @@
       <div class="col-md-12">
         <h1>デザイン</h1>
         <p>「誰に」対して「何を」「なぜ」伝えるのかをじっくり考えて、デザインやモノづくりをすることが好きです。</p>
-        <p><a href="./introduce#design">詳しくはこちら ></a></p>
+        <p><a href="./introduce/design/index.html">詳しくはこちら ></a></p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
+        <h5>「競技プログラミング勉強会」<br>告知用フライヤー</h5>
         <a href="./flier/kyoupuroseptember"><img src="./img/design3.jpg" class="img-fluid"></a>
         <p>伝えたい相手</p>
         <p>「新しいことを学ぼう」という気が既にある人で、特にアルゴリズムに興味がある人。学ぶきっかけや、学びやすい環境を探している人。</p>
-        <a href="./flier/kyoupuroseptember">詳しくはこちら ></a>
       </div>
       <div class="col-md-4">
+        <h5>「つなぐカフェ@飯塚」<br>公式webサイト</h5>
         <a href="./website/tsunaguhugo"><img src="./img/design2.jpg" class="img-fluid"></a>
         <p>伝えたい相手</p>
         <p>飯塚の学生。特に、自分の活動を広めたい人、新しい技術で遊びたい人、活動や作業をしやすい場所を探している人。</p>
-        <a href="./website/tsunaguhugo">詳しくはこちら ></a>
       </div>
       <div class="col-md-4">
-        <a href="./flier/tsunagustaff"><img src="./img/design1.jpg" class="img-fluid"></a>
-        <p>伝えたい相手</p>
-        <p>「新しいことを学ぼう」という気が既にある人で、特にアルゴリズムに興味がある人。学ぶきっかけや、学びやすい環境を探している人。</p>
-        <a href="./flier/tsunagustaff">詳しくはこちら ></a>
+        <div class="offBox-md">
+          <h5>「つなぐカフェ@飯塚」<br>スタッフ募集フライヤー</h5>
+          <a href="./flier/tsunagustaff"><img src="./img/design1.jpg" class="img-fluid"></a>
+          <p>伝えたい相手</p>
+          <p>「学びながら働く」ことの興味がある大学生。</p>
+        </div>
       </div>
     </div>
 
@@ -138,6 +144,23 @@
 <ul>
   <li><a href="./">吉田のポートフォリオ</a>
 <ul>
+  <li><a href="./introduce/">Introduce</a>
+    <ul>
+      <li><a href="./introduce/manabi/">吉田の興味関心：学び</a>
+      <li><a href="./introduce/design/">吉田の興味関心：デザイン</a>
+    </ul>
+  </li>
+</ul>
+<ul>
+  <li><a href="./program/">Program</a>
+    <ul>
+      <li><a href="./program/others/">その他、計算機科学の技術にまつわる、今まで行ってきたこと</a>
+      <li><a href="./program/pyxelgame/">Pyxelで作った避けゲー</a>
+      <li><a href="./program/tapioka/">荒ぶるタピオカ</a>
+    </ul>
+  </li>
+</ul>
+<ul>
   <li><a href="./flier/">Flier</a>
     <ul>
       <li><a href="./flier/kyoupuroseptember/">競プロ勉強会の告知</a>
@@ -147,14 +170,6 @@
       <li><a href="./flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
       <li><a href="./flier/haruzemi/">春の輪読会の告知</a>
       <li><a href="./flier/tsunaguabout/">「つなぐカフェ＠飯塚」とはどういう場所か知らせる</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="./program/">Program</a>
-    <ul>
-      <li><a href="./program/pyxelgame/">Pyxelで作った避けゲー</a>
-      <li><a href="./program/tapioka/">荒ぶるタピオカ</a>
     </ul>
   </li>
 </ul>
@@ -179,7 +194,6 @@
 </ul>
     <ul>
       <li><a href="./portfolio/">作ったものたち</a>
-      <li><a href="./introduce/">吉田の興味・関心</a>
     </ul>
   </li>
 </ul>
