--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,7 +25,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
-          <a href="../introduce" class="navbar-brand">興味・関心</a>
+          <a href="../introduce/manabi" class="navbar-brand">学び</a>
+          <a href="../introduce/design" class="navbar-brand">デザイン</a>
           <a href="../portfolio" class="navbar-brand">作ったものたち</a>
         </div>
         <a href="https://github.com/104104104" class="navbar-brand">GitHub</a>
@@ -82,7 +83,7 @@
     <div class="col-md-12">
       <h3>制作したフライヤー</h3>
       <p><a href="../flier">一覧はこちら ></a></p>
-      <p>バイト先でフライヤーを作ることがよくあります。「誰に」対して「何を」「なぜ」伝えるのかを強く意識して制作しています。</p>
+      <p>バイト先でフライヤーを作ることがよくあります。「誰に」対して「なんの目的で」伝えるのかを強く意識して制作しています。</p>
     </div>
   </div>
   <div class="row">
@@ -155,6 +156,23 @@
 <ul>
   <li><a href="../">吉田のポートフォリオ</a>
 <ul>
+  <li><a href="../introduce/">Introduce</a>
+    <ul>
+      <li><a href="../introduce/manabi/">吉田の興味関心：学び</a>
+      <li><a href="../introduce/design/">吉田の興味関心：デザイン</a>
+    </ul>
+  </li>
+</ul>
+<ul>
+  <li><a href="../program/">Program</a>
+    <ul>
+      <li><a href="../program/others/">その他、計算機科学の技術にまつわる、今まで行ってきたこと</a>
+      <li><a href="../program/pyxelgame/">Pyxelで作った避けゲー</a>
+      <li><a href="../program/tapioka/">荒ぶるタピオカ</a>
+    </ul>
+  </li>
+</ul>
+<ul>
   <li><a href="../flier/">Flier</a>
     <ul>
       <li><a href="../flier/kyoupuroseptember/">競プロ勉強会の告知</a>
@@ -164,14 +182,6 @@
       <li><a href="../flier/nyuumon/">新入生のためのプログラミング入門イベント告知</a>
       <li><a href="../flier/haruzemi/">春の輪読会の告知</a>
       <li><a href="../flier/tsunaguabout/">「つなぐカフェ＠飯塚」とはどういう場所か知らせる</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="../program/">Program</a>
-    <ul>
-      <li><a href="../program/pyxelgame/">Pyxelで作った避けゲー</a>
-      <li><a href="../program/tapioka/">荒ぶるタピオカ</a>
     </ul>
   </li>
 </ul>
@@ -196,7 +206,6 @@
 </ul>
     <ul>
       <li><a href="../portfolio/">作ったものたち</a>
-      <li><a href="../introduce/">吉田の興味・関心</a>
     </ul>
   </li>
 </ul>
