tapiokajsがスマホで見れないバグを直した

--- a/flier/nyuumon/index.html
+++ b/flier/nyuumon/index.html
@@ -107,7 +107,7 @@
 <ul>
   <li><a href="../../program/">Program</a>
     <ul>
-      <li><a href="../../program/others/">その他、計算機科学の技術にまつわる、今まで行ってきたこと</a>
+      <li><a href="../../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
       <li><a href="../../program/pyxelgame/">Pyxelで作った避けゲー</a>
       <li><a href="../../program/tapioka/">荒ぶるタピオカ</a>
     </ul>
