fasilitylist のしゅうせ

--- a/htmls/tsunagu2/facility.html
+++ b/htmls/tsunagu2/facility.html
@@ -57,7 +57,7 @@
         <p><a href="./facility/interactivespace.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/interactivespace.jpg" class="img-fluid">
+        <img src="./img/facilitylist/interactivespace.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -72,7 +72,7 @@
         <p><a href="./facility/writeboard.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/writeboard.jpg" class="img-fluid">
+        <img src="./img/facilitylist/writeboard.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -87,7 +87,7 @@
         <p><a href="./facility/magatama.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/magatama.jpg" class="img-fluid">
+        <img src="./img/facilitylist/magatama.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -102,7 +102,7 @@
         <p><a href="./facility/65display.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/65display.jpg" class="img-fluid">
+        <img src="./img/facilitylist/65display.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -117,7 +117,7 @@
         <p><a href="./facility/ipad.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/ipad.jpg" class="img-fluid">
+        <img src="./img/facilitylist/ipad.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -132,7 +132,7 @@
         <p><a href="./facility/macbookpro.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/macbookpro.jpg" class="img-fluid">
+        <img src="./img/facilitylist/macbookpro.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -147,7 +147,7 @@
         <p><a href="./facility/3dprinter.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/3dprinter.jpg" class="img-fluid">
+        <img src="./img/facilitylist/3dprinter.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -162,7 +162,7 @@
         <p><a href="./facility/concentratebooth.html"> 詳しくはこちら> </a></p>
       </div>
       <div class="col-md-8">
-        <img src="./img/facilityList/concentratebooth.jpg" class="img-fluid">
+        <img src="./img/facilitylist/concentratebooth.jpg" class="img-fluid">
       </div>
     </div>
   </div>
