テクノロジーを書き足した

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="navbar-nav">
           <a href="./introduce/manabi" class="navbar-brand">学び</a>
           <a href="./introduce/design" class="navbar-brand">デザイン</a>
-          <a href="./portfolio" class="navbar-brand">作ったものたち</a>
+          <a href="./program" class="navbar-brand">テクノロジー</a>
+          <a href="./portfolio" class="navbar-brand">一覧</a>
         </div>
         <a href="https://github.com/104104104" class="navbar-brand">GitHub</a>
       </div>
@@ -56,12 +57,14 @@
     <div class="row">
       <div class="col-md-12">
         <h3>吉田の興味・関心</h3>
+        <p>「学び」「デザイン」「テクノロジー」の３つの軸で紹介します。<br>
+          この３つの軸をうまく1つにまとめて、自分で納得できる形に表現したいと考えているのですが、適切なまとめ方がまだわかっていません。</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <h1>学び</h1>
-        <p>人が新しいことを学び変化することの支援や、そもそも「学ぶ」とはどういうことか、といった知見に興味があります。</p>
+        <p>人が新しいことを学び変化することの支援や、そもそも「学ぶ」とはどういうことか、といった知見に興味があります。<br>例えば、「U理論」や「暗黙知」と行った知見に興味があります。</p>
         <p><a href="./introduce/manabi/index.html">詳しくはこちら ></a></p>
       </div>
     </div>
@@ -92,7 +95,8 @@
     <div class="row">
       <div class="col-md-12">
         <h1>デザイン</h1>
-        <p>「誰に」対して「何を」「なぜ」伝えるのかをじっくり考えて、デザインやモノづくりをすることが好きです。</p>
+        <p>「誰にとって価値のある情報なのか」をじっくり考えて、デザインやモノづくりをすることが好きです。<br>
+          『ノンデザイナーズ・デザインブック』はいつも参考にしています。</p>
         <p><a href="./introduce/design/index.html">詳しくはこちら ></a></p>
       </div>
     </div>
@@ -101,7 +105,7 @@
         <h5>「競技プログラミング勉強会」<br>告知用フライヤー</h5>
         <a href="./flier/kyoupuroseptember"><img src="./img/design3.jpg" class="img-fluid"></a>
         <p>伝えたい相手</p>
-        <p>「新しいことを学ぼう」という気が既にある人で、特にアルゴリズムに興味がある人。学ぶきっかけや、学びやすい環境を探している人。</p>
+        <p>「新しいことを学ぼう」という気がある人で、特にアルゴリズムに興味がある人。学ぶきっかけや、学びやすい環境を探している人。</p>
       </div>
       <div class="col-md-4">
         <h5>「つなぐカフェ@飯塚」<br>公式webサイト</h5>
@@ -119,14 +123,12 @@
       </div>
     </div>
 
-
     <div class="row">
-      <div class="col-md-12">
-        <h1>ジャンル別の制作物まとめ</h1>
-        <p>このページでは、制作物を、吉田の興味・関心に基づいてまとめました。</p>
-        <p>「これからどんなことがしたくて」「これまで何をしてきたのか」という点が伝わるように情報をまとめたつもりです。</p>
-        <p>他にも、<a href="./portfolio">こちら</a>では、制作物をジャンル別にまとめています。</p>
-      </div>
+        <div class="col-md-12">
+          <h1>テクノロジー</h1>
+          <p>技術には興味を持って、いろんなことに取り組んできました。</p>
+          <p><a href="./program/index.html">詳しくはこちら ></a></p>
+        </div>
     </div>
   </div>
 </div>
