--- a/event/rantyao/index.html
+++ b/event/rantyao/index.html
@@ -27,7 +27,8 @@
         <div class="navbar-nav">
           <a href="../../introduce/manabi" class="navbar-brand">学び</a>
           <a href="../../introduce/design" class="navbar-brand">デザイン</a>
-          <a href="../../portfolio" class="navbar-brand">作ったものたち</a>
+          <a href="../../program" class="navbar-brand">テクノロジー</a>
+          <a href="../../portfolio" class="navbar-brand">一覧</a>
         </div>
         <a href="https://github.com/104104104" class="navbar-brand">GitHub</a>
       </div>
