トップページの誤字を微修正

--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
         <img src="./img/underbar.png" class="underbar">
         <p>
           吉田は、問題を解決するためには、手段を考えるより前に、まず今ある問題を明確にすることが大切だと考えています。<br>
-          そのうえで、問題を解決する手段として、デザインを考えたり技術を使ったりするよう心がけています。
+          そのうえで、問題を解決する手段として、デザインを考えたり技術を使ったりするよう心がけています。<br>
+        </p>
+        <p>
+          もちろん、<strong>問題を理解するために手を動かすことは必要</strong>なので、試作をして問題を整理してから作業を進めるよう心がけています。
         </p>
         <p>
           例えば、Webサイトを作る時でしたら、いきなり「情報をかっこよく見せるデザイン」のような曖昧なものを考えるのではなく、まず「誰に情報を伝えるのか」「その人にとってどう嬉しい情報なのか」をよく考え、それを元に解決する問題を改めて整理し、情報の見せ方を考えることが大切だと考えています。
         </p>
         <p>
-          webサイトのデザインだけに限らず、技術を使う時でも、例えばデータベースを使いたいのでRailsで実装するという風に、解決したい問題に応じて技術を選ぶことが大切だと考えています。
+          Webサイトのデザインだけに限らず、技術を使う時でも、例えばデータベースを使いたいのでRailsで実装するという風に、解決したい問題に応じて技術を選ぶことが大切だと考えています。
         </p>
       </div>
     </div>
