--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
           そのうえで、問題を解決する手段として、デザインを考えたり技術を使ったりするよう心がけています。<br>
         </p>
         <p>
-          もちろん、<strong>問題を理解するために手を動かすことは必要</strong>なので、試作をして問題を整理してから作業を進めるよう心がけています。
-        </p>
-        <p>
           例えば、Webサイトを作る時でしたら、いきなり「情報をかっこよく見せるデザイン」のような曖昧なものを考えるのではなく、まず「誰に情報を伝えるのか」「その人にとってどう嬉しい情報なのか」をよく考え、それを元に解決する問題を改めて整理し、情報の見せ方を考えることが大切だと考えています。
         </p>
         <p>
           Webサイトのデザインだけに限らず、技術を使う時でも、例えばデータベースを使いたいのでRailsで実装するという風に、解決したい問題に応じて技術を選ぶことが大切だと考えています。
         </p>
+        <h3>手を動かしながら、問題を明確にする</h3>
+        <p>もちろん、<strong>問題を理解するために手を動かすことは必要</strong>なので、試作をして問題を整理してから作業を進めるようにしています。
+        <br>もう少し具体的には、まずは問題を解決できそうな試作をして、自分以外の人に見せ、得られたフィードバックを元に問題を整理し、問題を解決できそうな試作をする…というサイクルを繰り返します。</p>
+        <p>また、「サイクルのどこかで成果物が完成するのでそこで終わっていい」という訳ではなく、サイクルを回すごとにより良い成果物になるよう改善を繰り返す必要があるとも感じています。</p>
       </div>
     </div>
 
