--- a/event/sinnyuusei/index.html
+++ b/event/sinnyuusei/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>吉田のポートフォリオ</title>
+  <title>吉田信将のポートフォリオ</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,9 +15,14 @@
   <link rel="stylesheet" href="../../mycss/style.css">
   <link rel="stylesheet" href="../../mycss/style2.css">
   <link rel="stylesheet" href="../../mycss/move.css">
+
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
+  
 </head>
 
 <body>
+  <div class="wrap">
   <header>
     
     <div class="fixed-menu-nomove">
@@ -225,6 +230,7 @@
     </div>
   </div>
 </footer>
+</div> 
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
