ねこタピのページ追加

--- a/interesting/design/index.html
+++ b/interesting/design/index.html
@@ -132,10 +132,20 @@
 <ul>
   <li><a href="../../">吉田のポートフォリオ</a>
 <ul>
+  <li><a href="../../program/">Program</a>
+    <ul>
+      <li><a href="../../program/nekotapi/">猫とタピオカ</a>
+      <li><a href="../../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
+      <li><a href="../../program/pyxelgame/">Pyxelで作った避けゲー</a>
+      <li><a href="../../program/tapioka/">荒ぶるタピオカ</a>
+    </ul>
+  </li>
+</ul>
+<ul>
   <li><a href="../../website/">Website</a>
     <ul>
       <li><a href="../../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../../website/tsunaguhugo/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)(一応残してある、説明の文章が古いバージョン)</a>
+      <li><a href="../../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
       <li><a href="../../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
     </ul>
   </li>
@@ -145,15 +155,6 @@
     <ul>
       <li><a href="../../interesting/manabi/">吉田の興味関心：学び</a>
       <li><a href="../../interesting/design/">吉田の興味関心：デザイン</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="../../program/">Program</a>
-    <ul>
-      <li><a href="../../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
-      <li><a href="../../program/pyxelgame/">Pyxelで作った避けゲー</a>
-      <li><a href="../../program/tapioka/">荒ぶるタピオカ</a>
     </ul>
   </li>
 </ul>
