--- a/website/index.html
+++ b/website/index.html
@@ -61,7 +61,7 @@
       <div class="row">
       <div class="col-md-6">
         <li>
-          <a href="https://104104104.github.io/website/tsunaguhugo/"><h3>つなぐカフェ＠飯塚webサイト(Hugoバージョン)(一応残してある、説明の文章が古いバージョン)</h3></a> (<time pubdate="2019-06-28">2019-06-28</time>)
+          <a href="https://104104104.github.io/website/tsunaguhugo/"><h3>(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</h3></a> (<time pubdate="2019-06-28">2019-06-28</time>)
           <p>つなぐカフェ＠飯塚の公式ページをHugoで作りました。学外の人間とつながりたい学生、新しい技術で遊びたい学生、活動や作業を行いやすい場所を探している学生に伝えることを想定しています。</p>
         </li>
       </div>
@@ -110,10 +110,20 @@
 <ul>
   <li><a href="../">吉田のポートフォリオ</a>
 <ul>
+  <li><a href="../program/">Program</a>
+    <ul>
+      <li><a href="../program/nekotapi/">猫とタピオカ</a>
+      <li><a href="../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
+      <li><a href="../program/pyxelgame/">Pyxelで作った避けゲー</a>
+      <li><a href="../program/tapioka/">荒ぶるタピオカ</a>
+    </ul>
+  </li>
+</ul>
+<ul>
   <li><a href="../website/">Website</a>
     <ul>
       <li><a href="../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../website/tsunaguhugo/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)(一応残してある、説明の文章が古いバージョン)</a>
+      <li><a href="../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
       <li><a href="../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
     </ul>
   </li>
@@ -123,15 +133,6 @@
     <ul>
       <li><a href="../interesting/manabi/">吉田の興味関心：学び</a>
       <li><a href="../interesting/design/">吉田の興味関心：デザイン</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="../program/">Program</a>
-    <ul>
-      <li><a href="../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
-      <li><a href="../program/pyxelgame/">Pyxelで作った避けゲー</a>
-      <li><a href="../program/tapioka/">荒ぶるタピオカ</a>
     </ul>
   </li>
 </ul>
