--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
         <p>もちろん、<strong>問題を理解するために手を動かすことは必要</strong>なので、試作をして問題を整理してから作業を進めるようにしています。
         <br>もう少し具体的には、まずは問題を解決できそうな試作をして、自分以外の人に見せ、得られたフィードバックを元に問題を整理し、問題を解決できそうな試作をする…というサイクルを繰り返します。</p>
         <p>また、「サイクルのどこかで成果物が完成するのでそこで終わっていい」という訳ではなく、サイクルを回すごとにより良い成果物になるよう改善を繰り返す必要があるとも感じています。</p>
-        <h3 class="mainTextCenter">作業しながら問題の整理が進んだ例<br><div class="notBigH3">(吉田のポートフォリオサイトの変遷)</div></h3>
-        <img src="./img/portfolios.png" class="img-fluid portfolioimg">
+        <p>例えば、このポートフォリオサイトは、試作を繰り返すうちにだんだんと問題が整理され、今のデザインになっています。</p>
+        <img src="./img/portfolios.png" class="img-fluid">
+        <p><a href="./website/myportfolio">吉田のポートフォリオの制作話について、詳しくはこちら ></a></p>
       </div>
     </div>
 
@@ -165,19 +166,6 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <h1>その他、必要に応じて制作したもの</h1>
-        <img src="./img/underbar.png" class="underbar">
-        <p>
-          イベントを企画運営することになり、人手が空いておらずフライヤーを自分で勉強して制作したことや、「レトロゲームを作ってみようの会」で吉田が作りかけたゲームの評判がよかったので完成させてネット上で公開したことなど、これまで様々なことをしてきました。
-        </p>
-        <p>
-          詳細は<a href="./works">こちら</a>にまとめています。
-        </p>
-      </div>
-    </div>
-
   </div>
 
   </div>
@@ -200,12 +188,29 @@
             </div>
           </div>
 
+          <div class="row">
+              <div class="col-md-12">
+                <h3><a href="./introduce">自己紹介</a></h3><br>
+                <h3><a href="./works">作品まとめ</a></h3><br>
+              </div>
+            </div>
+
       <div class="row">
         <div class="col-md-12">
-          <h2>サイトマップ</h2>
+          <h5>ページ一覧</h5>
           
 <ul>
   <li><a href="./">吉田のポートフォリオ</a>
+<ul>
+  <li><a href="./website/">Website</a>
+    <ul>
+      <li><a href="./website/myportfolio/">吉田信将のポートフォリオの裏話</a>
+      <li><a href="./website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="./website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="./website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
+    </ul>
+  </li>
+</ul>
 <ul>
   <li><a href="./program/">Program</a>
     <ul>
@@ -213,15 +218,6 @@
       <li><a href="./program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
       <li><a href="./program/pyxelgame/">Pyxelで作った避けゲー</a>
       <li><a href="./program/tapioka/">荒ぶるタピオカ</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="./website/">Website</a>
-    <ul>
-      <li><a href="./website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="./website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="./website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
     </ul>
   </li>
 </ul>
