--- a/program/tapioka/index.html
+++ b/program/tapioka/index.html
@@ -88,12 +88,29 @@
             </div>
           </div>
 
+          <div class="row">
+              <div class="col-md-12">
+                <h3><a href="../../introduce">自己紹介</a></h3><br>
+                <h3><a href="../../works">作品まとめ</a></h3><br>
+              </div>
+            </div>
+
       <div class="row">
         <div class="col-md-12">
-          <h2>サイトマップ</h2>
+          <h5>ページ一覧</h5>
           
 <ul>
   <li><a href="../../">吉田のポートフォリオ</a>
+<ul>
+  <li><a href="../../website/">Website</a>
+    <ul>
+      <li><a href="../../website/myportfolio/">吉田信将のポートフォリオの裏話</a>
+      <li><a href="../../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="../../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="../../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
+    </ul>
+  </li>
+</ul>
 <ul>
   <li><a href="../../program/">Program</a>
     <ul>
@@ -101,15 +118,6 @@
       <li><a href="../../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
       <li><a href="../../program/pyxelgame/">Pyxelで作った避けゲー</a>
       <li><a href="../../program/tapioka/">荒ぶるタピオカ</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="../../website/">Website</a>
-    <ul>
-      <li><a href="../../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
     </ul>
   </li>
 </ul>
