--- a/website/index.html
+++ b/website/index.html
@@ -49,6 +49,18 @@
       <div class="row">
       <div class="col-md-6">
         <li>
+          <a href="https://104104104.github.io/website/myportfolio/"><h3>吉田信将のポートフォリオの裏話</h3></a> (<time pubdate="2019-09-05">2019-09-05</time>)
+          <p></p>
+        </li>
+      </div>
+      <div class="col-md-3">
+        <a href="https://104104104.github.io/website/myportfolio/"><img src="../img/websiteslist/Myportfolio.jpg" class="img-fluid"></a>
+      </div>
+    </div>
+    
+      <div class="row">
+      <div class="col-md-6">
+        <li>
           <a href="https://104104104.github.io/website/tsunaguhugo2/"><h3>つなぐカフェ＠飯塚webサイト(Hugoバージョン)</h3></a> (<time pubdate="2019-09-01">2019-09-01</time>)
           <p></p>
         </li>
@@ -103,12 +115,29 @@
             </div>
           </div>
 
+          <div class="row">
+              <div class="col-md-12">
+                <h3><a href="../introduce">自己紹介</a></h3><br>
+                <h3><a href="../works">作品まとめ</a></h3><br>
+              </div>
+            </div>
+
       <div class="row">
         <div class="col-md-12">
-          <h2>サイトマップ</h2>
+          <h5>ページ一覧</h5>
           
 <ul>
   <li><a href="../">吉田のポートフォリオ</a>
+<ul>
+  <li><a href="../website/">Website</a>
+    <ul>
+      <li><a href="../website/myportfolio/">吉田信将のポートフォリオの裏話</a>
+      <li><a href="../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
+      <li><a href="../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
+    </ul>
+  </li>
+</ul>
 <ul>
   <li><a href="../program/">Program</a>
     <ul>
@@ -116,15 +145,6 @@
       <li><a href="../program/others/">計算機科学の技術にまつわる、今まで行ってきたこと</a>
       <li><a href="../program/pyxelgame/">Pyxelで作った避けゲー</a>
       <li><a href="../program/tapioka/">荒ぶるタピオカ</a>
-    </ul>
-  </li>
-</ul>
-<ul>
-  <li><a href="../website/">Website</a>
-    <ul>
-      <li><a href="../website/tsunaguhugo2/">つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../website/tsunaguhugo/">(一応残してある、説明の文章が古いバージョン)つなぐカフェ＠飯塚webサイト(Hugoバージョン)</a>
-      <li><a href="../website/tsunaguold/">つなぐカフェ＠飯塚webサイト(旧バージョン)</a>
     </ul>
   </li>
 </ul>
