--- a/works/index.html
+++ b/works/index.html
@@ -136,7 +136,7 @@
                     <p>
                         ワークショップのための本もいくつも読みました。特に「ワークショップデザイン論―創ることで学ぶ(山内祐平 著, 森玲奈 著, 安斎勇樹 著, 慶應義塾大学出版会」は、内容が高度で難しいですが、自分の今の企画で進めて良いか困った時に、指針になります。
                     </p>
-                    <p><a href="/event">イベントについて、詳しくはこちら ></a></p>
+                    <p><a href="/event">ワークショップについて、詳しくはこちら ></a></p>
                 </div>
             </div>
             <img src="/works/slide.jpg" style="width:20%;">
