リンクの間違いを訂正

--- a/works/index.html
+++ b/works/index.html
@@ -66,7 +66,7 @@
                     </p>
                     <p>
                         例えば、チームでの開発の際に、吉田は多くの部分をこなし、チームの中心として活躍することができます。また、新しい分野を学ぶとき、これまでの知識を足がかりにして効率よく学ぶことができます。</p>
-                    <p><a href="/website/myportfolio">「つなぐカフェ＠飯塚」のWebサイトについて、詳しくはこちら > </a></p>
+                    <p><a href="/website/tsunaguhugo2">「つなぐカフェ＠飯塚」のWebサイトについて、詳しくはこちら > </a></p>
                 </div>
             </div>
 
